<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>world.bentobox</groupId>
    <artifactId>Greenhouses</artifactId>
    <version>${revision}</version>

    <name>Greenhouses</name>
    <description>Greenhouses is an add-on for BentoBox, an expandable Minecraft Bukkit plugin for island-type games like ASkyBlock or AcidIsland.</description>
    <url>https://github.com/BentoBoxWorld/Greenhouses</url>
    <inceptionYear>2019</inceptionYear>

    <scm>
        <connection>scm:git:https://github.com/BentoBoxWorld/Greenhouses.git</connection>
        <developerConnection>scm:git:git@github.com:BentoBoxWorld/Greenhouses.git</developerConnection>
        <url>https://github.com/BentoBoxWorld/Greenhouses</url>
    </scm>

    <ciManagement>
        <system>jenkins</system>
        <url>http://ci.codemc.org/job/BentoBoxWorld/job/Greenhouses</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/BentoBoxWorld/Greenhouses/issues</url>
    </issueManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.org/repository/maven-snapshots</url>
        </snapshotRepository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.org/repository/maven-releases</url>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <powermock.version>2.0.9</powermock.version>
        <!-- More visible way how to change dependency versions -->
        <spigot.version>1.19.3-R0.1-SNAPSHOT</spigot.version>
        <bentobox.version>1.21.0</bentobox.version>
        <!-- Revision variable removes warning about dynamic version -->
        <revision>${build.version}-SNAPSHOT</revision>
        <!-- This allows to change between versions and snapshots. -->
        <build.version>1.7.4</build.version>
        <build.number>-LOCAL</build.number>
        <sonar.projectKey>BentoBoxWorld_Greenhouses</sonar.projectKey>
        <sonar.organization>bentobox-world</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <profiles>
        <!-- Build profile is activated by BUILD_NUMBER variable. It replaces 
            0 with correct build number. -->
        <!-- This profile will be used only if BUILD_NUMBER environment variable 
            exists. -->
        <profile>
            <id>ci</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <build.number>-b${env.BUILD_NUMBER}</build.number>
                <!-- GIT_BRANCH -->
            </properties>
        </profile>
        <!-- master profile is activated by GIT_BRANCH variable. It removes 
            '-SNAPSHOT' at the end of -->
        <!-- ${build.version} -->
        <!-- This profile will be used only if environment variable GIT_BRANCH 
            is origin/master. -->
        <profile>
            <id>master</id>
            <activation>
                <property>
                    <name>env.GIT_BRANCH</name>
                    <value>origin/master</value>
                </property>
            </activation>
            <properties>
                <!-- Override only if necessary -->
                <revision>${build.version}</revision>
                <!-- Empties build.number value -->
                <build.number></build.number>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.org/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${spigot.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>world.bentobox</groupId>
            <artifactId>bentobox</artifactId>
            <version>${bentobox.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Mockito (Unit testing) -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.11.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>


    </dependencies>


    <build>
        <!-- By default ${revision} is ${build.version}-SNAPSHOT -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be only ${build.version}. -->

        <!-- By default ${build.number} is -LOCAL. -->
        <!-- If the BUILD_NUMBER variable is set, then it will be -b[number]. -->
        <!-- If GIT_BRANCH variable is set to origin/master, then it will 
            be the empty string. -->
        <finalName>${project.name}-${revision}${build.number}</finalName>

        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources/locales</directory>
                <targetPath>./locales</targetPath>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <argLine>
                        ${argLine}
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <show>public</show>
                    <failOnError>false</failOnError>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>install</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.5.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <!-- This is required to prevent Jacoco from adding 
                            synthetic fields to a JavaBean class (causes errors in testing) -->
                        <exclude>**/*Names*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
